--- a/index.html
+++ b/index.html
@@ -1,15 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <h1>Hello!</h1>
-        <span>meow</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tabs Project</title>
+
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background: #f5abc9;
+        color: grey;
+      }
+
+      img {
+        display: block;
+        width: 100%;
+      }
+
+      .section-center {
+        width: 90vw;
+        margin: 0 auto;
+        max-width: 1170px;
+        min-width: 340px;
+        padding: 5rem 0;
+      }
+
+      .image {
+        margin-bottom: 2rem;
+      }
+
+      img {
+        border-radius: 0.5rem;
+        object-fit: cover;
+        height: 30rem;
+      }
+
+      .tabs {
+        background: #ffe5e2;
+        border-radius: 0.5rem;
+        grid-template-rows: auto 1fr;
+      }
+
+      .btn-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+
+      .button:nth-child(1) {
+        border-top-left-radius: 0.5rem;
+      }
+
+      .button:nth-child(3) {
+        border-top-right-radius: 0.5rem;
+      }
+
+      .button {
+        padding: 1rem 0;
+        border: none;
+        font-size: 1rem;
+        background: #b6c9f0;
+        cursor: pointer;
+        transition: all 0.3s linear;
+        letter-spacing: 0.25rem;
+      }
+
+      .button:hover:not(.live) {
+        background: #e93b81;
+        color: white;
+      }
+
+      .tabs-content {
+        padding: 2rem 1.5rem;
+      }
+
+      /* hide content */
+      .content {
+        display: none;
+      }
+
+      .button.live {
+        background: #ffe5e2;
+      }
+
+      .content.live {
+        display: block;
+      }
+
+      @media (min-width: 992px) {
+        .image {
+          margin-bottom: 0;
+        }
+
+        .section-center {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          column-gap: 2rem;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="section-center">
+      <div class="tabs">
+        <!-- btn container -->
+        <div class="btn-container">
+          <button class="button live" id="step-1-btn">Step 1</button>
+          <button class="button" id="step-2-btn">Step 2</button>
+          <button class="button" id="step-3-btn">Step 3</button>
+          <button class="button" id="step-4-btn">Step 4</button>
+          <button class="button" id="step-5-btn">Step 5</button>
+          <button class="button" id="step-6-btn">Step 6</button>
+          <button class="button" id="step-7-btn">Step 7</button>
+        </div>
+        <div class="tabs-content">
+          <div class="content live" id="step-1-content">
+            <h3>Step 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+              sint cumque quasi, amet impedit tempore necessitatibus iste.
+              Ratione possimus perspiciatis sapiente, ex alias, ipsam sint
+              beatae vel repellat aperiam corrupti porro et molestiae nobis
+              itaque recusandae vitae atque! Reiciendis voluptatum molestiae
+              autem consectetur corporis libero itaque quo mollitia quod!
+              Corrupti doloribus veniam iusto soluta laborum saepe debitis
+              reiciendis atque nihil eaque ducimus quo ullam ipsum, laboriosam
+              velit vitae sint, eius molestiae unde, tempora hic ipsam?
+              Cupiditate, beatae. Nostrum eos, id velit nisi libero
+              exercitationem, et fugiat assumenda mollitia debitis deleniti,
+              illum iusto. Officiis, ratione ex? Magni, impedit vel. Quam,
+              eaque.
+            </p>
+          </div>
+          <div class="content" id="step-2-content">
+            <h3>Step 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              molestiae doloremque enim deleniti voluptatum necessitatibus,
+              facilis et quas, quasi magni obcaecati iusto ipsam ipsum amet
+              autem labore dignissimos accusantium dolorem perspiciatis non
+              harum, alias vel a asperiores? Qui amet tempora mollitia quos,
+              facilis debitis nemo praesentium, optio facere nostrum, eum totam
+              magnam quasi laborum sint repellendus quibusdam vero? Ipsum
+              explicabo officiis culpa delectus quasi cumque saepe voluptates
+              accusantium voluptatem omnis iste, sequi beatae quae dolor vero
+              nostrum at amet eum dolores ut. Autem velit eius, libero adipisci
+              dolore harum accusantium ipsum, voluptate ad recusandae vitae
+              blanditiis? Harum nihil molestiae cum!
+            </p>
+          </div>
+          <div class="content" id="step-3-content">
+            <h3>Step 3</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              asperiores magnam? In expedita laudantium magnam ratione alias
+              minus nemo incidunt, dignissimos architecto placeat corporis
+              molestiae labore vitae ullam laborum ut culpa eaque officiis,
+              blanditiis sunt fugit ex? Neque quod mollitia delectus ipsa?
+              Dolore veritatis, tenetur laudantium possimus unde debitis enim
+              est illum, ea distinctio quod itaque quaerat ex sint eum optio in
+              saepe labore sunt odit? Dolore, iusto! Ducimus sint laudantium
+              consectetur. Velit facere culpa excepturi ad, quae distinctio iure
+              incidunt. Odio alias laboriosam unde quo repudiandae corporis
+              laborum quaerat asperiores minima quis in nam maxime recusandae
+              iure, provident a?
+            </p>
+          </div>
+          <div class="content" id="step-4-content">
+            <h3>Step 4</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              asperiores magnam? In expedita laudantium magnam ratione alias
+              minus nemo incidunt, dignissimos architecto placeat corporis
+              molestiae labore vitae ullam laborum ut culpa eaque officiis,
+              blanditiis sunt fugit ex? Neque quod mollitia delectus ipsa?
+              Dolore veritatis, tenetur laudantium possimus unde debitis enim
+              est illum, ea distinctio quod itaque quaerat ex sint eum optio in
+              saepe labore sunt odit? Dolore, iusto! Ducimus sint laudantium
+              consectetur. Velit facere culpa excepturi ad, quae distinctio iure
+              incidunt. Odio alias laboriosam unde quo repudiandae corporis
+              laborum quaerat asperiores minima quis in nam maxime recusandae
+              iure, provident a?
+            </p>
+          </div>
+          <div class="content" id="step-5-content">
+            <h3>Step 5</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              asperiores magnam? In expedita laudantium magnam ratione alias
+              minus nemo incidunt, dignissimos architecto placeat corporis
+              molestiae labore vitae ullam laborum ut culpa eaque officiis,
+              blanditiis sunt fugit ex? Neque quod mollitia delectus ipsa?
+              Dolore veritatis, tenetur laudantium possimus unde debitis enim
+              est illum, ea distinctio quod itaque quaerat ex sint eum optio in
+              saepe labore sunt odit? Dolore, iusto! Ducimus sint laudantium
+              consectetur. Velit facere culpa excepturi ad, quae distinctio iure
+              incidunt. Odio alias laboriosam unde quo repudiandae corporis
+              laborum quaerat asperiores minima quis in nam maxime recusandae
+              iure, provident a?
+            </p>
+          </div>
+          <div class="content" id="step-6-content">
+            <h3>Step 6</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              asperiores magnam? In expedita laudantium magnam ratione alias
+              minus nemo incidunt, dignissimos architecto placeat corporis
+              molestiae labore vitae ullam laborum ut culpa eaque officiis,
+              blanditiis sunt fugit ex? Neque quod mollitia delectus ipsa?
+              Dolore veritatis, tenetur laudantium possimus unde debitis enim
+              est illum, ea distinctio quod itaque quaerat ex sint eum optio in
+              saepe labore sunt odit? Dolore, iusto! Ducimus sint laudantium
+              consectetur. Velit facere culpa excepturi ad, quae distinctio iure
+              incidunt. Odio alias laboriosam unde quo repudiandae corporis
+              laborum quaerat asperiores minima quis in nam maxime recusandae
+              iure, provident a?
+            </p>
+          </div>
+          <div class="content" id="step-7-content">
+            <h3>Step 7</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              asperiores magnam? In expedita laudantium magnam ratione alias
+              minus nemo incidunt, dignissimos architecto placeat corporis
+              molestiae labore vitae ullam laborum ut culpa eaque officiis,
+              blanditiis sunt fugit ex? Neque quod mollitia delectus ipsa?
+              Dolore veritatis, tenetur laudantium possimus unde debitis enim
+              est illum, ea distinctio quod itaque quaerat ex sint eum optio in
+              saepe labore sunt odit? Dolore, iusto! Ducimus sint laudantium
+              consectetur. Velit facere culpa excepturi ad, quae distinctio iure
+              incidunt. Odio alias laboriosam unde quo repudiandae corporis
+              laborum quaerat asperiores minima quis in nam maxime recusandae
+              iure, provident a?
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-    <img src="images\singapore3.jpg" alt="">
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
